# fastapi-pytest-asyncio-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: db.py  main.py
src/filters/: __init__.py  songs.py
src/models/: __init__.py  base.py  songs.py
src/routers/: __init__.py  songs.py
tests/: conftest.py  factories.py
tests/fixtures/: spotify_top_100_20241119.csv
tests/routers/: test_songs.py
