[tool.poetry]
name = "fastapi-pytest-asyncio-demo"
version = "0.1.0"
description = ""
authors = ["Armand Rego <armand@weirdsheeplabs.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
fastapi = "^0.115.5"
fastapi-filter = "^2.0.0"
fastapi-pagination = "^0.12.32"
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
greenlet = "^3.1.1"
httpx = "^0.27.2"
polyfactory = "^2.18.0"
pre-commit = "^4.0.1"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
   # boto3 throw this warning, nothing we can do about it
   'ignore:datetime.datetime.utcnow\(\) is deprecated',
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
per-file-ignores = {'__init__.py' = ['F401', 'F403'], '*migrations*/' = ['F401']}

[tool.pyright]
extraPaths = ["src"]
exclude = [
    "**/site-packages",
    "**/.venv",
    "**/migrations",
    "**/.ruff_cache"
]
ignore = [
   "**/site-packages",
   "**/.venv",
   "**/migrations",
   "**/.ruff_cache"
]
typeCheckingMode = "basic"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
